--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Curated list of tools to make launching websites easier",
   "scripts": {
     "build": "npm-run-all build:*",
-    "build:css": "node-sass public/css/main.scss > public/css/main.css",
+    "build:css": "node-sass --output-style compressed public/css/main.scss > public/css/main.css",
+    "build:js": "uglifyjs public/js/lib/jquery.min.js public/js/lib/bootstrap.min.js public/js/lib/material.min.js public/js/lib/nouislider.min.js public/js/lib/material-kit.min.js public/js/main.js --compress -o public/js/main.min.js",
     "postinstall": "npm run build",
     "start": "node server.js",
     "watch": "npm-run-all --parallel watch:*",
@@ -21,7 +22,8 @@
     "node-sass": "^3.6.0",
     "nodemailer": "^2.3.0",
     "nodemon": "^1.9.1",
-    "npm-run-all": "^1.8.0"
+    "npm-run-all": "^1.8.0",
+    "uglify-js": "^2.7.3"
   },
   "engines": {
     "node": "6.1.0"
