Added Airbrake for errors reporting

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "watch:css": "nodemon -e scss -w public/css -x npm run build:css"
   },
   "dependencies": {
+    "airbrake" : "^1.2.0",
     "body-parser": "^1.15.1",
     "compression": "^1.6.2",
     "express": "^4.13.4",
