--- a/package.json
+++ b/package.json
@@ -2,15 +2,15 @@
   "name": "deploystack",
   "version": "1.0.0",
   "description": "Curated list of tools to make launching websites easier",
-  "license" : "MIT",
-  "repository" : {
-    "type" : "git",
-    "url" : "https://github.com/switowski/deploystack"
+  "license": "MIT",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/switowski/deploystack"
   },
   "scripts": {
     "build": "npm-run-all build:*",
     "build:css": "node-sass --output-style compressed public/css/main.scss > public/css/main.css",
-    "build:js": "uglifyjs public/js/lib/jquery.min.js public/js/lib/bootstrap.min.js public/js/lib/material.min.js public/js/lib/nouislider.min.js public/js/lib/material-kit.min.js public/js/lib/clipboard.min.js public/js/main.js --compress -o public/js/main.min.js",
+    "build:js": "uglifyjs public/js/lib/jquery.min.js public/js/lib/bootstrap.min.js public/js/lib/material.min.js public/js/lib/nouislider.min.js public/js/lib/material-kit.min.js public/js/lib/clipboard.min.js public/js/lib/autotrack.min.js public/js/main.js --compress -o public/js/main.min.js",
     "postinstall": "npm run build",
     "start": "node server.js",
     "watch": "npm-run-all --parallel watch:*",
