--- a/package.json
+++ b/package.json
@@ -12,30 +12,32 @@
     "build:css": "node-sass --output-style compressed public/css/main.scss > public/css/main.min.css && node-sass --output-style compressed public/css/frameworks.scss > public/css/frameworks.min.css",
     "build:js": "uglifyjs public/js/lib/jquery.min.js public/js/lib/bootstrap.min.js public/js/lib/material.min.js public/js/lib/nouislider.min.js public/js/lib/material-kit.min.js public/js/lib/clipboard.min.js public/js/lib/autotrack.min.js public/js/main.js --compress -o public/js/main.min.js",
     "check": "node scripts/check-for-updates.js",
+    "deploy": "gcloud app deploy",
     "postinstall": "npm run build",
     "start": "node server.js",
     "watch": "npm-run-all --parallel watch:*",
     "watch:css": "nodemon -e scss -w public/css -x npm run build:css"
   },
   "dependencies": {
-    "body-parser": "^1.15.1",
+    "body-parser": "^1.18.3",
     "chalk": "^1.1.3",
     "cheerio": "^0.22.0",
-    "clipboard": "^1.5.16",
-    "compression": "^1.6.2",
-    "express": "^4.13.4",
-    "express-validator": "^2.20.4",
-    "method-override": "^2.3.5",
-    "morgan": "^1.7.0",
+    "clipboard": "^1.7.1",
+    "compression": "^1.7.2",
+    "express": "^4.16.3",
+    "express-validator": "^2.21.0",
+    "method-override": "^2.3.10",
+    "morgan": "^1.9.0",
     "node-sass": "^3.6.0",
-    "nodemailer": "^2.3.0",
-    "nodemon": "^1.9.1",
+    "gulp-sass": "^3.0.0",
+    "nodemailer": "^2.7.2",
+    "nodemon": "^1.17.5",
     "npm-run-all": "^1.8.0",
-    "pug": "^2.0.0-beta6",
-    "request": "^2.83.0",
-    "uglify-js": "^2.7.3"
+    "pug": "^2.0.3",
+    "request": "^2.87.0",
+    "uglify-js": "^2.8.29"
   },
   "engines": {
-    "node": "6.1.0"
+    "node": "8.x.x"
   }
 }
